apps/directory-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directory-app
  namespace: demo
spec:
  selector:
    app: directory-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
