apps/directory-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-app
  namespace: demo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: directory-app.dtikube.techinsights.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directory-app
                port:
                  number: 80
